--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html>
+    <head>
+        <link href="cv-stylesheet.css" rel="stylesheet" />
+    </head>
+
     <body>
-        <h1>Hey hey, world!</h1>
-        <p>This is hosted on Github Pages</p>
+        <div>Hi world!</div>
     </body>
 </html>
