--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <html>
+    <head>
+        <link href="style.css" rel="stylesheet" />
+    </head>
     <body>
         <div>Hi world!</div>
     </body>
