--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <html>
     <head>
         <link href="style.css" rel="stylesheet" />
+        <meta name="viewport" content="width=device-width,initial-scale=1" />
+
     </head>
     <body>
-        <a href="Project A/project_a.html">Projects</a>
+        <a href="Projects/projects.html">Projects</a>
         <div>Contacts</div>
         <div>About me</div>
     </body>
