--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <a href="Projects/projects.html">Projects</a>
-        <div>Contacts</div>
-        <div>About me</div>
+        <a href="Contacts/contacts.html">Contacts</a>
+        <a href="About me/introduction.html">About me</a>
     </body>
 </html>
