--- a/About me/introduction.html
+++ b/About me/introduction.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <link href="projects.css" rel="stylesheet" />
+        <link href="introduction.css" rel="stylesheet" />
         <meta name="viewport" content="width=device-width,initial-scale=1" />
 
     </head>
