--- a/Contacts/contacts.html
+++ b/Contacts/contacts.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <link href="projects.css" rel="stylesheet" />
+        <link href="contacts.css" rel="stylesheet" />
         <meta name="viewport" content="width=device-width,initial-scale=1" />
 
     </head>
