--- a/index.html
+++ b/index.html
@@ -5,17 +5,19 @@
 
     </head>
     <body>
-        <ul>
+        <ul class="links">
             <li>
-                <a href="Projects/projects.html">Projects</a>
+                <a class="links__projectslink" href="Projects/projects.html">Projects</a>
             </li>
             <li>
-                <a href="Contacts/contacts.html">Contacts</a>
+                <a class="links__contactslink" href="Contacts/contacts.html">Contacts</a>
             </li>
             <li>
-                <a href="About me/introduction.html">About me</a>
+                <a class="links__about-melink" href="About me/introduction.html">About me</a>
+            </li>
+            <li>
+                <a class="links__socialslink" href="Socials/socials.html">Socials</a>
             </li>
         </ul>
-        
     </body>
 </html>
