--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
     </head>
     <body>
         <ul class="links">
-            <li>
-                <a class="links__projectslink" href="Projects/projects.html">Projects</a>
+            <li class="links__link popout1">
+                <a class="links__link__projectslink" href="Projects/projects.html">Projects</a>
             </li>
-            <li>
-                <a class="links__contactslink" href="Contacts/contacts.html">Contacts</a>
+            <li class="links__link popout2">
+                <a class="links__link__contactslink" href="Contacts/contacts.html">Contacts</a>
             </li>
-            <li>
-                <a class="links__about-melink" href="About me/introduction.html">About me</a>
+            <li class="links__link popout3">
+                <a class="links__link__about-melink" href="About me/introduction.html">About me</a>
             </li>
-            <li>
-                <a class="links__socialslink" href="Socials/socials.html">Socials</a>
+            <li class="links__link popout4">
+                <a class="links__link__socialslink" href="Socials/socials.html">Socials</a>
             </li>
         </ul>
     </body>
