--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
     <body>
         <ul class="links">
             <li class="links__link popout1">
-                <a class="links__link__projectslink" href="Projects/projects.html">Projects</a>
+                <a class="links__link__projectslink" href="Projects/index.html">Projects</a>
             </li>
             <li class="links__link popout2">
-                <a class="links__link__contactslink" href="Contacts/contacts.html">Contacts</a>
+                <a class="links__link__contactslink" href="Contacts/index.html">Contacts</a>
             </li>
             <li class="links__link popout3">
-                <a class="links__link__about-melink" href="About me/introduction.html">About me</a>
+                <a class="links__link__about-melink" href="About me/index.html">About me</a>
             </li>
             <li class="links__link popout4">
-                <a class="links__link__socialslink" href="Socials/socials.html">Socials</a>
+                <a class="links__link__socialslink" href="Socials/index.html">Socials</a>
             </li>
         </ul>
     </body>
